# usemakoto.dev

./: .gitignore  CNAME  README.md  RESEARCH.md  TODO.md  index.html
.github/workflows/: deploy.yml
assets/: styles.css
attestations/: dbom-example.json  origin-example.json  stream-window-example.json  transform-example.json
comparison/: decision-guide.html  index.html  open-lineage.html  w3c-prov.html
demos/: index.html
demos/01/: index.html
demos/02/: index.html
demos/03/: index.html
demos/04/: index.html
demos/05/: index.html
demos/06/: index.html
demos/06-invisible-unicode-guardrails/: README.md  run.py
demos/setup/: index.html
examples/: index.html  squad-dbom.json
examples/invisible-unicode/: index.html
expanso/: index.html
integrations/: index.html
integrations/airflow/: index.html
integrations/dagster/: index.html
integrations/databricks/: index.html
integrations/dbt/: index.html
integrations/expanso/: index.html
integrations/kafka/: index.html
integrations/prefect/: index.html
integrations/snowflake/: index.html
levels/: index.html
privacy/: index.html
prompts/: dbom-generation-prompt.md
schema/: latest.json
sdk/: index.html
sdk/python/: README.md  pyproject.toml
sdk/python/examples/: generate_dbom.py  verify_dbom.py
sdk/python/makoto/: __init__.py  generate.py  verify.py
spec/: index.html  l1-requirements.html  l2-requirements.html  l3-requirements.html  signature-guide.html
threats/: index.html
validate/: index.html
verify/: bash.html  go.html  index.html  nodejs.html  python.html
(+18 files in other folders)
