[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "makoto"
version = "0.1.0"
description = "Generate and verify Makoto Data Bills of Materials (DBOMs)"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "Apache-2.0" }
keywords = ["data", "provenance", "dbom", "supply-chain", "makoto"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "jsonschema>=4.0",
    "requests>=2.20",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov"]

[project.urls]
Homepage = "https://usemakoto.dev"
Documentation = "https://usemakoto.dev/sdk/"
Repository = "https://github.com/makoto-project/makoto"

[tool.hatch.build.targets.wheel]
packages = ["makoto"]
